package navire;

import tools.TypeNav;

public abstract class NavireProfondeur extends Navire {
    public NavireProfondeur(int id, TypeNav myType, int numEq) {
        super(id, myType, numEq);
    }
}
