@startuml

title __NAVIRE's Class Diagram__\n

  namespace  {
    namespace avire {
      class navire.Chalutier {
          - filetDeploye : boolean
          + Chalutier()
          + isFiletDeploye()
          + resetFilet()
          + setFilet()
      }
    }
  }
  

  namespace  {
    namespace avire {
      class navire.Destroyer {
          + Destroyer()
      }
    }
  }
  

  namespace  {
    namespace avire {
      abstract class navire.Navire {
          # etat : int
          # id : int
          # numEq : int
          # portee : int
          # position : Point
          # strAffichage : String
          # vitesse : int
          + Navire()
          + affichagePlateau()
          + estValide()
          + getId()
          + getMyType()
          + getNumEq()
          + getPortee()
          + getPosition()
          + getVitesse()
          + setCoule()
          + setPosition()
          + toString()
      }
    }
  }
  

  namespace  {
    namespace avire {
      abstract class navire.NavireProfondeur {
          + NavireProfondeur()
      }
    }
  }
  

  namespace  {
    namespace avire {
      abstract class navire.NavireSurface {
          + NavireSurface()
      }
    }
  }
  

  namespace  {
    namespace avire {
      class navire.SousMarin {
          # endommage : boolean
          + SousMarin()
          + isEndommage()
          + setEndommage()
      }
    }
  }
  

  navire.Chalutier -up-|> navire.NavireSurface
  navire.Destroyer -up-|> navire.NavireSurface
  navire.Navire o-- tools.TypeNav : myType
  navire.NavireProfondeur -up-|> navire.Navire
  navire.NavireSurface -up-|> navire.Navire
  navire.SousMarin -up-|> navire.NavireProfondeur


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
